k8s/oracle-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oracle
  namespace: airport
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oracle
  template:
    metadata:
      labels:
        app: oracle
    spec:
      containers:
        - name: oracle
          image: gvenzl/oracle-free:23.7-slim
          ports:
            - containerPort: 1521
          volumeMounts:
            - name: oracle-data
              mountPath: /opt/oracle/oradata
          readinessProbe:
            exec:
              command: ["healthcheck.sh"]
            initialDelaySeconds: 90
            periodSeconds: 20
          livenessProbe:
            exec:
              command: ["healthcheck.sh"]
            initialDelaySeconds: 180
            periodSeconds: 30
          resources:
            requests:
              cpu: "1"
              memory: 3Gi
            limits:
              cpu: "2"
              memory: 5Gi
      volumes:
        - name: oracle-data
          persistentVolumeClaim:
            claimName: oracle-data
