k8s/oracle-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oracle
  namespace: airport
spec:
  selector:
    app: oracle
  ports:
    - name: sqlnet
      port: 1521
      targetPort: 1521
